# NesyGENAAAI

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: colab_paths.json
data/demo/: graph.csv  lexicon.json  manifest.csv
data/demo/images/: query.pgm  train_1.pgm  train_2.pgm  train_3.pgm
notebooks/: Adaptive_NeSy_Gen_Experiments_Colab.ipynb  Lightweight_Adaptive_NeSy_Gen_One_Day_Colab.ipynb  RadReport_VL_Adaptive_NeSy_Gen_Colab.ipynb
scripts/: build_manifests.py  build_medsiglip_index.py  build_radiology_primekg.py  evaluate_publication.py  prepare_radreport_vl_adapters.py  run_experiments.py  train_chexagent_qlora.py  train_lightweight_vlm.py
src/adaptive_nesy_gen/: __init__.py  backends.py  cli.py  evaluation.py  experiments.py  gate.py  knowledge.py  lightweight_vit_t5.py  pipeline.py  primekg_io.py  retrieval.py  schema.py  text.py  verification.py
tests/: test_chexagent_dataset.py  test_core.py  test_evaluation.py  test_lightweight_dataset.py  test_publication_evaluation.py
