[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "adaptive-nesy-gen"
version = "0.1.0"
description = "Adaptive claim-level neuro-symbolic verification for explainable radiology report generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Adaptive NeSy-Gen contributors" }]
dependencies = [
  "numpy>=1.24,<3",
  "Pillow>=10,<12",
]

[project.urls]
Repository = "https://github.com/FaezehMillerAI/NesyGENAAAI"
Notebook = "https://colab.research.google.com/github/FaezehMillerAI/NesyGENAAAI/blob/main/notebooks/Adaptive_NeSy_Gen_Experiments_Colab.ipynb"

[project.optional-dependencies]
medgemma = [
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.45,<1; platform_system != 'Darwin'",
  "torch>=2.3,<3",
  "transformers>=4.50,<5",
]
chexagent = [
  "accelerate>=0.29,<1",
  "albumentations>=1.4,<2",
  "bitsandbytes>=0.43,<1; platform_system != 'Darwin'",
  "einops>=0.8,<1",
  "faiss-cpu>=1.8,<2",
  "opencv-python-headless>=4.9,<5",
  "peft>=0.13,<1",
  "pyarrow>=15,<20",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "transformers==4.40.0",
]
eval = [
  "nltk>=3.9,<4",
  "rouge-score>=0.1.2,<1",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
adaptive-nesy-gen = "adaptive_nesy_gen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_nesy_gen"]

[tool.hatch.build.targets.wheel.force-include]
"data/demo" = "adaptive_nesy_gen/demo"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
conflicts = [
  [
    { extra = "medgemma" },
    { extra = "chexagent" },
  ],
]
